--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,25 @@
 /*  your css code here. If applicable */
-.star {
-  position: relative;
-  
-  display: inline-block;
-  width: 0;
-  height: 0;
-  
-  margin-left: .9em;
-  margin-right: .9em;
-  margin-bottom: 1.2em;
-  
-  border-right:  .3em solid transparent;
-  border-bottom: .7em  solid yellow;
-  border-left:   .3em solid transparent;
+.star{
+      --star-color:yellow;
+      --sqrt-3:1.73205080757;
+  margin: 0 auto;
+      font-size:10em;
+      width: 0;
+      height: 0;
+      position:relative;
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-bottom: calc( 1em * var(--sqrt-3) ) solid var(--star-color);
+}
 
-  /* Controlls the size of the stars. */
-  font-size: 24px;
-  
-  &:before, &:after {
-    content: '';
-    
-    display: block;
-    width: 0;
-    height: 0;
-    
-    position: absolute;
-    top: .6em;
-    left: -1em;
-  
-    border-right:  1em solid transparent;
-    border-bottom: .7em  solid yellow;
-    border-left:   1em solid transparent;
-  
-    transform: rotate(-35deg);
-  }
-  
-  &:after {  
-    transform: rotate(35deg);
-  }
+.star:after{
+      content:"";
+      position:absolute;
+      width: 0;
+      height: 0;
+      left:-1em;
+      top:calc( 1em * var(--sqrt-3) / 3 );
+      border-left: 1em solid transparent;
+      border-right: 1em solid transparent;
+      border-top: calc( 1em * var(--sqrt-3)  ) solid var(--star-color);
 }
