--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@
       width: 0;
       height: 0;
       position:relative;
-      border-left: 1em solid transparent;
-      border-right: 1em solid transparent;
-      border-bottom: calc( 1em * var(--sqrt-3) ) solid var(--star-color);
+      border-left: 100px solid transparent;
+      border-right: 100px solid transparent;
+      border-bottom: calc( 100px * var(--sqrt-3) ) solid var(--star-color);
 }
 
 .star:after{
@@ -17,9 +17,9 @@
       position:absolute;
       width: 0;
       height: 0;
-      left:-1em;
-      top:calc( 1em * var(--sqrt-3) / 3 );
-      border-left: 1em solid transparent;
-      border-right: 1em solid transparent;
-      border-top: calc( 1em * var(--sqrt-3)  ) solid var(--star-color);
+      left:-100px;
+      top:calc( 100px * var(--sqrt-3) / 3 );
+      border-left: 100px solid transparent;
+      border-right: 100px solid transparent;
+      border-top: calc( 100px * var(--sqrt-3)  ) solid var(--star-color);
 }
