--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*  your css code here. If applicable */
 .star{
       --star-color:yellow;
-      --sqrt-3:1.73205080757;
+      --sqrt-3:1;
   margin: 0 auto;
       font-size:10em;
       width: 0;
